--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div class="wrapper">
 
 <header>
-<img src="/images/logo32.png" alt="">
+<img src="images/logo32.png" alt="">
 <nav>
 <a href="#aboutus">About Us</a>
 <a href="#testimonials">Testimonials</a>
 </nav>
 
 </header>
-<img src="/images/htgreen-hero.jpg" alt="" class="heroimage">
+<img src="images/htgreen-hero.jpg" alt="" class="heroimage">
 
 <main>
     <section>
@@ -34,7 +34,7 @@
 
     <section>
         <h2>Solar PV Solutions</h2>
-        <img src="/images/pv250.jpg" alt="" class="f-right">
+        <img src="images/pv250.jpg" alt="" class="f-right">
         <p>Solar Photovoltaic systems have come of age. Installers now can guarantee 
             reliable cost-free power to your home or business. ROI is now taking less time 
             than ever thanks to the ever decreasing equipment costs and better technology. 
@@ -50,7 +50,7 @@
 
     <section>
         <h2>Geothermal</h2>
-        <img src="/images/geo250.jpg" alt="" class="f-right">
+        <img src="images/geo250.jpg" alt="" class="f-right">
         <p>Energy from the earth. It sounds simple because it is. The earth is warmer than 
             the air and we can use this to heat your home. HT Green can engineer a solution 
             to fit your situation to give you free plentiful home warming energy year-round. 
@@ -69,7 +69,7 @@
 
     <section>
         <h2>Wind Turbines</h2>
-        <img src="/images/turbine250.jpg" alt="" class="f-right">
+        <img src="images/turbine250.jpg" alt="" class="f-right">
         <p>If you have the space and the aspect, we have the know-how to engineer a  
             wind turbine system that generates electricity when the wind blows. Team a  
             wind turbine with a solar PV system and you increase your energy generation 
@@ -101,7 +101,7 @@
     <a id="testimonials"></a>
     <section>
         <h2>Testimonials</h2>
-        <img src="/images/testimonials/j-g-brown-200.jpg" alt="" class="f-left">
+        <img src="images/testimonials/j-g-brown-200.jpg" alt="" class="f-left">
         <p>"We installed our solar panels last year and our electricity bill is  
             now less than zero. We actually went into credit in late Spring!" 
             <span>June & Gavin Brown, Surrey Hills NSW</span></p>
@@ -110,7 +110,7 @@
     </section>
 
     <div>
-        <img src="/images/testimonials/s-p-hill-200.jpg" alt="" class="f-left">
+        <img src="images/testimonials/s-p-hill-200.jpg" alt="" class="f-left">
         <p>"We toyed with the idea of installing a hydro system a while back 
             and never got around to it but thanks to HT Green's Hydro Oasis  
             System it was easy! Our creek supplies our total energy needs." 
@@ -121,7 +121,7 @@
         </div>
 
     <div>
-        <img src="/images/testimonials/r-sanderson-200.jpg" alt="" class="f-left">
+        <img src="images/testimonials/r-sanderson-200.jpg" alt="" class="f-left">
         <p>"I can look forward to no more electricity bills! HT Green took  
             care of everything; recommended!" 
             <span>Roberta Sanderson, TAS </span></p>
